# Examply

./: Makefile  README.md  SETUP.md  package.json
.claude/: settings.local.json
backend/: .env.example  examply.db  examply_v2.db  pyproject.toml
backend/app/: main.py
backend/app/api/: admin.py  attempts.py  health.py  problems.py  reviews.py  sessions.py  stats.py  upload.py
backend/app/db/: database.py
backend/app/models/: __init__.py  attempt.py  problem.py  session.py  upload.py  user.py
backend/app/pipeline/: __init__.py  adapter_engine.py  dummy_import.py  ocr_processor.py  problem_parser.py  text_extractor.py
backend/app/pipeline/adapters/: examtopics.yaml  generic.yaml
backend/app/services/: attempt_service.py  import_service.py  problem_service.py  session_service.py
backend/app/utils/: pdf_security.py
backend/examply_backend/: dev.py
backend/tests/: test_health.py
docs/: api-spec.md  architecture.md  ocr-pipeline.md  product-spec.md
frontend/: package-lock.json  package.json
frontend/scripts/: dev.js
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/study/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: theme-toggle.tsx  upload-dropzone.tsx
frontend/src/components/ui/: toaster.tsx
frontend/src/hooks/: use-toast.tsx
frontend/src/lib/: api.ts
frontend/src/store/: useAppStore.ts
